--- a/backend/package.json
+++ b/backend/package.json
@@ -11,5 +11,11 @@
   "license": "ISC",
   "devDependencies": {
     "hardhat": "^2.12.2"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.5"
   }
 }
